[package]
name = "car"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = { version = "0.11.5", features = ["serde"] }
tokio = { version = "1.39.2", features = ["full"] }
makepad-widgets = { path = "../makepad/widgets", version = "0.6.0" }
once_cell = "1.19.0"
uuid = "1.10.0"
anyhow = "1.0.86"
lazy_static = "1.5.0"
log = "*"
log4rs = "1"
